# retico-conversational-agent

./: .gitignore  README.md  pyproject.toml
env_requirements/: agent.yml  agent_3.yml  env_list.txt  pip_packages.txt
src/retico_conversational_agent/: ASR_DM.py  ASR_DM_subclass.py  ASR_DM_subclass_faster.py  LLM_DM.py  LLM_DM_HF.py  LLM_DM_HF_subclass.py  Speaker_DM.py  TTS_DM.py  TTS_DM_subclass.py  VAD_DM.py  WOZ_microphone.py  WOZ_microphone2.py  __init__.py  additional_IUs.py  alignment_xtts.py  dialogue_history.py  dialogue_history_hf.py  dialogue_manager.py  dialogue_manager_2.py  dialogue_manager_faster.py  main.py  main_2.py  main_cleps.py  main_remote_computing.py  simple_llm.py  test.py  test_cuda.py  test_hf.py  test_stop_crit.py  utils.py
src/retico_conversational_agent/configs/: LLMs.json
src/retico_conversational_agent/tests/: alignment_xtts.py  analyze_tts_latency.py  durations.txt  kokoro.py  test_hf.py  test_llm.py  test_logger_latency.py  test_mic_module.py  test_new_tts.py  test_speaker_module.py  test_tts.py  test_tts_latency.py
src/retico_conversational_agent/tests/alignments_tests/sentence_1/: words_durations.json  words_durations_asr.json  words_timestamps_extraction_similarity_scores.json
src/retico_conversational_agent/tests/alignments_tests/sentence_2/: words_durations.json  words_durations_asr.json  words_timestamps_extraction_similarity_scores.json
src/retico_conversational_agent/tests/swb_hf_chat/: dev.csv  test.csv  test_2.csv
src/retico_conversational_agent/tests/tts_latency/: glow.csv  jenny.csv  xtts.csv
(+3 files in other folders)
